--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- SITE TITLE -->
     <title>WilterD - Portafolio</title>
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/Logo1.png">
     <!-- Animation CSS -->
     <link rel="stylesheet" href="assets/css/animate.css">
     <!-- Latest Bootstrap min CSS -->
@@ -66,18 +66,18 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand page-scroll" href="#home_section">
-                    <img class="logo_light" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
-                    <img class="logo_dark" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
-                    <img class="logo_default" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
+                    <img class="logo_light" draggable="false" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
+                    <img class="logo_dark" draggable="false" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
+                    <img class="logo_default" draggable="false" src="assets/images/Logo1.png" alt="logo" width="60px" height="53px" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation"> <span class="ion-android-menu"></span> </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <a class="navbar-brand page-scroll" href="#home_section">
-                        <img class="logo_light" src="assets/images/Logo1.png" alt="logo" />
-                        <img class="logo_dark" src="assets/images/Logo1.png" alt="logo" />
-                        <img class="logo_default" src="assets/images/Logo1.png" alt="logo" />
+                        <img draggable="false" class="logo_light" src="assets/images/Logo1.png" alt="logo" />
+                        <img draggable="false" class="logo_dark" src="assets/images/Logo1.png" alt="logo" />
+                        <img draggable="false" class="logo_default" src="assets/images/Logo1.png" alt="logo" />
                     </a>
                     <ul class="navbar-nav">
                         <li>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="col-xl-5 col-md-5">
                         <div class="banner_img animation" data-animation="fadeInUp" data-animation-delay="0.02s">
-                            <img src="assets/images/wilterdiaz.png" alt="my_image" />
+                            <img draggable="false" src="assets/images/wilterdiaz.png" alt="my_image" />
                         </div>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="about_img animation" data-animation="fadeInUp" data-animation-delay="0.02s">
-                        <img src="assets/images/wilterdiaz2.png" alt="about_img" />
+                        <img draggable="false" src="assets/images/wilterdiaz2.png" alt="about_img" />
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -416,7 +416,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <div class="footer_logo">
-                            <a target="_blank" href="https://wa.me/584122111999"><img alt="logo"
+                            <a target="_blank" href="https://wa.me/584122111999"><img draggable="false" alt="logo"
                                     src="assets/images/Logo1.png" width="200px" height="140px"></a>
                         </div>
                         <h6 class="widget_title pt-3">Contáctame</h6>
