--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <!-- Meta -->
     <meta charset="utf-8">
@@ -101,12 +100,10 @@
             </nav>
         </div>
     </header>
-    <!-- START HEADER -->
-
     <!-- START SECTION BANNER -->
     <section id="home_section" class="banner_section banner_shape bg_black3">
         <div class="banner_slide_content pb-0">
-            <div class="container"><!-- STRART CONTAINER -->
+            <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="col-xl-6 col-md-7">
                         <div class="banner_content text_white banner_center_content">
@@ -134,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- END CONTAINER-->
+            </div>
         </div>
         <div class="social_banner social_vertical">
             <ul class="list_none social_icons text-center">
@@ -147,8 +144,6 @@
             </ul>
         </div>
     </section>
-    <!-- END SECTION BANNER -->
-
     <!-- START SECTION ABOUT US -->
     <section id="about" class="bg_black4">
         <div class="container">
@@ -405,9 +400,6 @@
             </div>
         </div>
     </section>
-    <!-- END WORK EXPERIENCES -->
-
-
 
     <!-- START FOOTER SECTION -->
     <footer class="footer_dark bg_black4" id="contact">
