--- a/index.html
+++ b/index.html
@@ -263,10 +263,16 @@
                             <h4>Desarrollo Web Laravel</h4>
                             <p><span class="text_default">Mar. 2023</span> - lideraymotiva.com</p>
                             <hr>
-                            <p>Desarrollador Full Stack encargado del proyecto. <br> Tecnologías aplicadas:
-                                HTML5/CSS3/PHP7/JS</p>
+                            <p>Desarrollador Full Stack encargado del proyecto</p>
+                            <span class="skills">HTML</span>
+                                 <span class="skills">CSS</span> 
+                                 <span class="skills">PHP</span>
+                                 <span class="skills">JS</span>
+                                 <span class="skills">MySQL</span>
+                                 <span class="skills">Laravel</span>
+                            
                             <a target="_blank" href="https://dev.lideraymotiva.com"
-                                class="btn btn-default rounded-0 btn-aylen animation" data-animation="fadeInUp"
+                                class="btn btn-default rounded-0 btn-aylen animation d-block" data-animation="fadeInUp"
                                 data-animation-delay="0.05s">Ver Más</a>
                         </div>
                     </div>
@@ -278,10 +284,14 @@
                             <p><span class="text_default">Oct. 2021</span> - serviciosysolucionesambientales.com</p>
                             <hr>
                             <p>Desarrollador web a cargo del proyecto Frotend/Backend. Sección Admin PHP
-                                Tecnologías aplicadas: HTML5/CSS3/PHP5/JS/MySQL</p>
+                                </p>
+                                <span class="skills">HTML</span>
+                                 <span class="skills">CSS</span> 
+                                 <span class="skills">PHP</span>
+                                 <span class="skills">JS</span>
                             <a target="_blank" href="https://serviciosysolucionesambientales.com"
-                                class="btn btn-default rounded-0 btn-aylen animation" data-animation="fadeInUp"
-                                data-animation-delay="0.05s">Ver Más</a>
+                                class="btn btn-default rounded-0 btn-aylen animation d-block" data-animation="fadeInUp"
+                                data-animation-delay="0.05s" >Ver Más</a>
                         </div>
                     </div>
                 </div>
@@ -293,9 +303,15 @@
                             <hr>
                             <p>Desarrollador Web a cargo del proyecto, sistema de facturación y venta de productos,
                                 almacén, punto de venta.
-                                Tecnologías aplicadas: HTML5/CSS3/PHP7/JS</p>
+                                 </p>
+                                 <span class="skills">HTML</span>
+                                 <span class="skills">CSS</span> 
+                                 <span class="skills">PHP</span>
+                                 <span class="skills">JS</span>
+                                 <span class="skills">MySQL</span>
+                                 <span class="skills">Laravel</span>
                             <a target="_blank" href="https://ventas.espirulinamax.com"
-                                class="btn btn-default rounded-0 btn-aylen animation" data-animation="fadeInUp"
+                                class="btn btn-default rounded-0 btn-aylen animation d-block" data-animation="fadeInUp"
                                 data-animation-delay="0.05s">Ver Más</a>
                         </div>
                     </div>
@@ -309,10 +325,14 @@
                             <p><span class="text_default">May. 2020</span> - gradu.guru</p>
                             <hr>
                             <p>Desarrollador Web Frotend/Backend Encargado del proyecto y Diseñador Gráfico del Logo
-                                Empresarial.
-                                Tecnologías aplicadas: HTML5/CSS3/JS/PHP7/ Adobe Ilustrator</p>
+                                Empresarial.</p>
+                                <span class="skills">HTML</span>
+                                 <span class="skills">CSS</span> 
+                                 <span class="skills">PHP</span>
+                                 <span class="skills">Adobe Ilustrator</span>
+
                             <a target="_blank" href="https://gradu.guru.com"
-                                class="btn btn-default rounded-0 btn-aylen animation" data-animation="fadeInUp"
+                                class="btn btn-default rounded-0 btn-aylen animation d-block" data-animation="fadeInUp"
                                 data-animation-delay="0.05s">Ver Más</a>
                         </div>
 
@@ -327,9 +347,14 @@
                             <hr>
                             <p>https://optimaempresas.com
                                 Desarrollador a cargo del proyecto, sección admin / dashboard, diseño web.
-                                Tecnologías aplicadas: HTML5/CSS3/PHP5</p>
+                                </p>
+                                <span class="skills">HTML</span>
+                                 <span class="skills">CSS</span> 
+                                 <span class="skills">PHP</span>
+                                 <span class="skills">JS</span>
+
                             <a target="_blank" href="https://optimaempresas.com"
-                                class="btn btn-default rounded-0 btn-aylen animation" data-animation="fadeInUp"
+                                class="btn btn-default rounded-0 btn-aylen animation d-block" data-animation="fadeInUp"
                                 data-animation-delay="0.05s">Ver Más</a>
                         </div>
                     </div>
@@ -342,8 +367,16 @@
                             <p><span class="text_default">Jul. 2022</span> - ucabline.ml</p>
                             <hr>
                             <p>https://ucabline.ml Desarrollador de aplicación Web y Móvil, aplicación para crear tareas en forma de línea de tiempo</p>
+
+                            <span class="skills">HTML</span>
+                            <span class="skills">CSS</span>
+                            <span class="skills">JS</span>
+                            <span class="skills">NODE</span>
+                            <span class="skills">ESPRESS</span>
+
+                            
                             <a href="#experience"
-                                class="btn btn-danger rounded-0" data-animation="fadeInUp"
+                                class="btn btn-danger rounded-0 d-block" data-animation="fadeInUp"
                                 data-animation-delay="0.05s">En Mantenimiento</a>
                         </div>
                     </div>
